// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionBar shows \`reveal state\` button on init 1`] = `
<button
  className="sc-bdVaJa boUuIV"
  disabled={undefined}
  onClick={undefined}
>
  Reveal card
</button>
`;

exports[`ActionBar shows grading buttons on reveal 1`] = `
Array [
  <button
    className="sc-bdVaJa boUuIV"
    disabled={undefined}
    onClick={undefined}
  >
    Wrong
  </button>,
  <button
    className="sc-bdVaJa boUuIV"
    disabled={undefined}
    onClick={undefined}
  >
    Correct
  </button>,
]
`;
